kubernetes/gatekeeper/templates/k8s-require-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenonroot
  annotations:
    description: >-
      Requires containers to run as non-root user. This is a security best
      practice to prevent privilege escalation attacks.
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNonRoot
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              description: >-
                List of container images that are exempt from this policy.
                Supports glob patterns.
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenonroot

        import future.keywords.in

        violation[{"msg": msg}] {
          container := input_containers[_]
          not is_exempt(container)
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container '%v' must set securityContext.runAsNonRoot to true", [container.name])
        }

        violation[{"msg": msg}] {
          container := input_containers[_]
          not is_exempt(container)
          container.securityContext.runAsUser == 0
          msg := sprintf("Container '%v' must not run as root (runAsUser: 0)", [container.name])
        }

        violation[{"msg": msg}] {
          pod := input.review.object
          not pod.spec.securityContext.runAsNonRoot
          container := input_containers[_]
          not is_exempt(container)
          not container.securityContext.runAsNonRoot
          msg := sprintf("Pod or container '%v' must set securityContext.runAsNonRoot to true", [container.name])
        }

        input_containers[c] {
          c := input.review.object.spec.containers[_]
        }

        input_containers[c] {
          c := input.review.object.spec.initContainers[_]
        }

        input_containers[c] {
          c := input.review.object.spec.ephemeralContainers[_]
        }

        is_exempt(container) {
          exempt_images := object.get(input, ["parameters", "exemptImages"], [])
          img := container.image
          glob.match(exempt_images[_], ["/"], img)
        }
